Added mediaqueries, mixin and function partials. Minified.

--- a/prepros.config
+++ b/prepros.config
@@ -455,7 +455,7 @@
         ],
         "output": {
           "extension": ".css",
-          "type": "REPLACE_SEGMENTS",
+          "type": "SOURCE_RELATIVE",
           "segments": [
             {
               "segment": "scss",
@@ -465,7 +465,8 @@
               "segment": "sass",
               "replaceWith": "css"
             }
-          ]
+          ],
+          "relativePath": "../../../assets/css/"
         }
       },
       "less": {
@@ -517,13 +518,14 @@
         ],
         "output": {
           "extension": ".html",
-          "type": "REPLACE_SEGMENTS",
+          "type": "SOURCE_RELATIVE",
           "segments": [
             {
               "segment": "pug",
               "replaceWith": "html"
             }
-          ]
+          ],
+          "relativePath": "../"
         }
       },
       "css": {
@@ -779,13 +781,14 @@
         ],
         "output": {
           "extension": ".html",
-          "type": "REPLACE_SEGMENTS",
+          "type": "SOURCE_RELATIVE",
           "segments": [
             {
               "segment": "turf",
               "replaceWith": "html"
             }
-          ]
+          ],
+          "relativePath": "../"
         }
       },
       "typescript": {
@@ -878,6 +881,77 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "src/assets/css/main.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/experiencia.kit",
+        "config": {
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/index.kit",
+        "config": {
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/partials/_footer.kit",
+        "config": {
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/partials/_head.kit",
+        "config": {
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/partials/_header.kit",
+        "config": {
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/sobre.kit",
+        "config": {
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      }
+    ]
   }
 }
