--- a/prepros.config
+++ b/prepros.config
@@ -893,6 +893,16 @@
         }
       },
       {
+        "file": "src/cs-dive.kit",
+        "config": {
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "src/experiencia.kit",
         "config": {
           "tasks": {
@@ -944,6 +954,16 @@
       },
       {
         "file": "src/sobre.kit",
+        "config": {
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/work.kit",
         "config": {
           "tasks": {
             "minify-html": {
