--- a/prepros.config
+++ b/prepros.config
@@ -893,6 +893,16 @@
         }
       },
       {
+        "file": "src/assets/css/partials/_pg-work.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "src/cs-dive.kit",
         "config": {
           "tasks": {
