--- a/prepros.config
+++ b/prepros.config
@@ -883,6 +883,16 @@
     },
     "files": [
       {
+        "file": "src/about.kit",
+        "config": {
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "src/assets/css/main.scss",
         "config": {
           "tasks": {
@@ -913,6 +923,26 @@
         }
       },
       {
+        "file": "src/cs-fbaul.kit",
+        "config": {
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/cs-wise.kit",
+        "config": {
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "src/experiencia.kit",
         "config": {
           "tasks": {
@@ -924,6 +954,16 @@
       },
       {
         "file": "src/index.kit",
+        "config": {
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/partials/_back-to-top.kit",
         "config": {
           "tasks": {
             "minify-html": {
