--- a/prepros.config
+++ b/prepros.config
@@ -965,6 +965,8 @@
       {
         "file": "src/partials/_back-to-top.kit",
         "config": {
+          "autoCompile": true,
+          "compileImported": true,
           "tasks": {
             "minify-html": {
               "enable": true
@@ -975,6 +977,8 @@
       {
         "file": "src/partials/_footer.kit",
         "config": {
+          "autoCompile": true,
+          "compileImported": true,
           "tasks": {
             "minify-html": {
               "enable": true
@@ -985,6 +989,8 @@
       {
         "file": "src/partials/_head.kit",
         "config": {
+          "autoCompile": true,
+          "compileImported": true,
           "tasks": {
             "minify-html": {
               "enable": true
@@ -995,6 +1001,8 @@
       {
         "file": "src/partials/_header.kit",
         "config": {
+          "autoCompile": true,
+          "compileImported": true,
           "tasks": {
             "minify-html": {
               "enable": true
