Updated main scss imports

--- a/prepros.config
+++ b/prepros.config
@@ -77,7 +77,7 @@
       "timeout": 20000,
       "autoUpload": false,
       "reuseConnection": true,
-      "connectionType": "ftp",
+      "connectionType": "sftp",
       "exportHistory": true,
       "history": []
     },
@@ -896,10 +896,19 @@
         "file": "src/assets/css/main.scss",
         "config": {
           "tasks": {
+            "autoprefixer": {
+              "enable": false
+            },
             "minify-css": {
               "enable": true
             }
           }
+        }
+      },
+      {
+        "file": "src/assets/css/partials/_fonts.scss",
+        "config": {
+          "compileImported": true
         }
       },
       {
@@ -910,6 +919,30 @@
               "enable": true
             }
           }
+        }
+      },
+      {
+        "file": "src/assets/css/partials/pages/_pg-about.scss",
+        "config": {
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "src/assets/css/partials/pages/_pg-casestudy.scss",
+        "config": {
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "src/assets/css/partials/pages/_pg-index.scss",
+        "config": {
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "src/assets/css/partials/pages/_pg-work.scss",
+        "config": {
+          "autoCompile": true
         }
       },
       {
@@ -1003,6 +1036,63 @@
         "config": {
           "autoCompile": true,
           "compileImported": true,
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/partials/svg/_svg-arrowForward.kit",
+        "config": {
+          "autoCompile": true,
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/partials/svg/_svg-arrowOutward.kit",
+        "config": {
+          "autoCompile": true,
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/partials/svg/_svg-chevronNext.kit",
+        "config": {
+          "autoCompile": true,
+          "compileImported": true,
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/partials/svg/_svg-chevronPrevious.kit",
+        "config": {
+          "autoCompile": true,
+          "compileImported": true,
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/partials/svg/_svg-email.kit",
+        "config": {
+          "autoCompile": true,
           "tasks": {
             "minify-html": {
               "enable": true
